--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                 <div class="upload-area" id="uploadArea">
                     <i class="fas fa-cloud-upload-alt upload-icon"></i>
                     <div class="upload-text">Drop files here or click to browse</div>
-                    <div class="upload-subtext">Any file type, up to 500MB</div>
+                    <div class="upload-subtext">Any file type, up to 100MB</div>
                 </div>
                 <input type="file" id="fileInput" accept="*/*">
                 <button class="btn" onclick="document.getElementById('fileInput').click()">
@@ -402,8 +402,8 @@
             const file = e.target.files[0];
             if (!file) return;
 
-            if (file.size > 500 * 1024 * 1024) {
-                showMessage('File size must be less than 500MB', 'error');
+            if (file.size > 100 * 1024 * 1024) { // 100MB limit
+                showMessage('File size must be less than 100MB', 'error');
                 return;
             }
 
@@ -414,47 +414,47 @@
             showProgress();
             hideMessage();
 
+            // Uguu/Litterbox only supports files up to 100MB
+            if (file.size > 100 * 1024 * 1024) {
+                hideProgress();
+                showMessage('File size must be less than 100MB for Uguu/Litterbox.', 'error');
+                return;
+            }
+
             try {
                 const formData = new FormData();
-                formData.append('file', file);
+                formData.append('reqtype', 'fileupload');
+                formData.append('time', '24h'); // File expires in 24 hours
+                formData.append('fileToUpload', file);
 
-                // Using tmpfiles.org - a free file hosting API that works with CORS
-                const response = await fetch('https://tmpfiles.org/api/v1/upload', {
+                const res = await fetch('https://litterbox.catbox.moe/resources/internals/api.php', {
                     method: 'POST',
                     body: formData
                 });
 
-                if (!response.ok) {
-                    throw new Error('Upload failed');
+                const url = await res.text();
+
+                if (!url.startsWith('https://')) {
+                    throw new Error('Upload failed: ' + url);
                 }
 
-                const result = await response.json();
-                
-                if (result.status === 'success') {
-                    const fileData = {
-                        name: file.name,
-                        size: file.size,
-                        type: file.type,
-                        url: result.data.url,
-                        downloadUrl: result.data.url.replace('tmpfiles.org/', 'tmpfiles.org/dl/'),
-                        uploadDate: new Date().toLocaleString()
-                    };
+                const fileData = {
+                    name: file.name,
+                    size: file.size,
+                    type: file.type,
+                    url: url,
+                    downloadUrl: url,
+                    uploadDate: new Date().toLocaleString()
+                };
 
-                    // Generate a simple key for the URL
-                    const fileKey = btoa(result.data.url).replace(/[^a-zA-Z0-9]/g, '').substring(0, 12);
-                    
-                    // Store file info in localStorage with the key
-                    localStorage.setItem('file_' + fileKey, JSON.stringify(fileData));
+                const fileKey = btoa(url).replace(/[^a-zA-Z0-9]/g, '').substring(0, 12);
+                localStorage.setItem('file_' + fileKey, JSON.stringify(fileData));
 
-                    hideProgress();
-                    displayFile(fileData, fileKey);
-                } else {
-                    throw new Error('Upload failed');
-                }
-
+                hideProgress();
+                displayFile(fileData, fileKey);
             } catch (error) {
                 hideProgress();
-                showMessage('Upload failed: ' + error.message, 'error');
+                showMessage(error.message, 'error');
             }
         }
 
@@ -601,6 +601,17 @@
             const sizes = ['Bytes', 'KB', 'MB', 'GB'];
             const i = Math.floor(Math.log(bytes) / Math.log(k));
             return parseFloat((bytes / Math.pow(k, i)).toFixed(2)) + ' ' + sizes[i];
+        }
+
+        async function getRootFolderId(apiToken) {
+            const res = await fetch(`https://api.gofile.io/getAccountDetails?token=${apiToken}`);
+            const data = await res.json();
+
+            if (data.status !== "ok") {
+                throw new Error("Failed to get root folder ID: " + data.status);
+            }
+
+            return data.data.rootFolder;
         }
     </script>
 </body>
